--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -734,6 +734,11 @@ img {
   outline: none;
   padding: 0.25rem 0.5rem 0.5rem 0;
 }
+
+.submit{
+  margin: 0 auto;
+  border : 0;
+}
 /*==================== FOOTER ====================*/
 .footer {
   padding-top: 2rem;
