--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1143,4 +1143,22 @@ img {
   .contact__inputs {
     grid-template-columns: repeat(2, 1fr);
   }
+  .footer__container {
+    grid-template-columns: repeat(1,1fr);
+  }
+  .footer__bg {
+    padding: 5rem 0 3.5rem;
+  }
+  .footer__links {
+    flex-direction: column;
+    column-gap: 5rem;
+  }
+
+  .footer__socials {
+    justify-self: flex-end;
+  }
+
+  .footer__copy {
+    margin-top: 4.5rem;
+  }
 }
